objects/Bread_Winner__Payment__c.object
<CustomObject>
    <fields>
        <fullName>Bread_Winner__Account_Id__c</fullName>
        <description>Account Id or Code</description>
        <label>Account Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Amount__c</fullName>
        <description>The amount of the payment</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Created_via__c</fullName>
        <label>Created via</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Currency_Rate__c</fullName>
        <description>Exchange rate when payment is received</description>
        <label>Currency Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Invoice__c</fullName>
        <label>Invoice</label>
        <referenceTo>Bread_Winner__Invoice__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Payment_Date__c</fullName>
        <description>Date the payment is being made</description>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Payment_Id__c</fullName>
        <description>PaymentID</description>
        <label>Payment Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Payment_Type__c</fullName>
        <label>Payment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Reference__c</fullName>
        <description>An optional description for the payment</description>
        <label>Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Status__c</fullName>
        <description>The status of the payment.</description>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Payment</label>
    <listViews>
        <fullName>Bread_Winner__All</fullName>
        <columns>NAME</columns>
        <columns>Bread_Winner__Invoice__c</columns>
        <columns>Bread_Winner__Payment_Date__c</columns>
        <columns>Bread_Winner__Amount__c</columns>
        <columns>Bread_Winner__Reference__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Payment Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>